add shadow page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
+    <h1>THREE</h1>
     <ul>
       <li><a href="/earth.html">Earth</a></li>
       <li><a href="./geometory.html">Geometory</a></li>
       <li><a href="./earthWithRotationCam.html">EarthWithRotationCam</a></li>
       <li><a href="./orbitControl.html">OrbitControl</a></li>
+      <li><a href="./shadow.html">Shadow</a></li>
     </ul>
+    <hr />
   </body>
 </html>
