--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,6 +12,7 @@
       <li><a href="./earthWithRotationCam.html">EarthWithRotationCam</a></li>
       <li><a href="./orbitControl.html">OrbitControl</a></li>
       <li><a href="./shadow.html">Shadow</a></li>
+      <li><a href="./cubes.html">Cubes</a></li>
     </ul>
     <hr />
   </body>
