--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,6 +13,7 @@
       <li><a href="./orbitControl.html">OrbitControl</a></li>
       <li><a href="./shadow.html">Shadow</a></li>
       <li><a href="./cubes.html">Cubes</a></li>
+      <li><a href="./fog.html">Fog</a></li>
     </ul>
     <hr />
   </body>
