--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,6 +14,7 @@
       <li><a href="./shadow.html">Shadow</a></li>
       <li><a href="./cubes.html">Cubes</a></li>
       <li><a href="./fog.html">Fog</a></li>
+      <li><a href="./worldPosition.html">WorldPosition</a></li>
     </ul>
     <hr />
   </body>
