--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,6 +15,7 @@
       <li><a href="./cubes.html">Cubes</a></li>
       <li><a href="./fog.html">Fog</a></li>
       <li><a href="./worldPosition.html">WorldPosition</a></li>
+      <li><a href="./objLoad.html">ObjLoad</a></li>
     </ul>
     <hr />
   </body>
