add class component

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,6 +17,7 @@
       <li><a href="./worldPosition.html">WorldPosition</a></li>
       <li><a href="./objLoad.html">ObjLoad</a></li>
       <li><a href="./mouseSelect.html">MouseSelect</a></li>
+      <li><a href="./classComponent.html">ClassComponent</a></li>
     </ul>
     <hr />
   </body>
