--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,6 +18,7 @@
       <li><a href="./objLoad.html">ObjLoad</a></li>
       <li><a href="./mouseSelect.html">MouseSelect</a></li>
       <li><a href="./classComponent.html">ClassComponent</a></li>
+      <li><a href="./math.html">Math</a></li>
     </ul>
     <hr />
   </body>
