--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,6 +19,7 @@
       <li><a href="./mouseSelect.html">MouseSelect</a></li>
       <li><a href="./classComponent.html">ClassComponent</a></li>
       <li><a href="./math.html">Math</a></li>
+      <li><a href="./math2.html">Math2</a></li>
     </ul>
     <hr />
   </body>
