--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>THREE</h1>
     <ul>
-      <li><a href="/earth.html">Earth</a></li>
+      <li><a href="./earth.html">Earth</a></li>
       <li><a href="./geometory.html">Geometory</a></li>
       <li><a href="./earthWithRotationCam.html">EarthWithRotationCam</a></li>
       <li><a href="./orbitControl.html">OrbitControl</a></li>
@@ -22,5 +22,9 @@
       <li><a href="./math2.html">Math2</a></li>
     </ul>
     <hr />
+    <h1>THREE 2nd</h1>
+    <ul>
+      <li><a href="./scroll.html">Scroll</a></li>
+    </ul>
   </body>
 </html>
