--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,6 +25,7 @@
     <h1>THREE 2nd</h1>
     <ul>
       <li><a href="./scroll.html">Scroll</a></li>
+      <li><a href="./shader.html">Shader</a></li>
     </ul>
   </body>
 </html>
