add shader2 page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -26,6 +26,7 @@
     <ul>
       <li><a href="./scroll.html">Scroll</a></li>
       <li><a href="./shader.html">Shader</a></li>
+      <li><a href="./shader2.html">Shader2</a></li>
     </ul>
   </body>
 </html>
