--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,6 +27,7 @@
       <li><a href="./scroll.html">Scroll</a></li>
       <li><a href="./shader.html">Shader</a></li>
       <li><a href="./shader2.html">Shader2</a></li>
+      <li><a href="./sphere.html">Sphere</a></li>
     </ul>
   </body>
 </html>
