add skelton animation

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,6 +28,7 @@
       <li><a href="./shader.html">Shader</a></li>
       <li><a href="./shader2.html">Shader2</a></li>
       <li><a href="./sphere.html">Sphere</a></li>
+      <li><a href="./animation.html">Animation</a></li>
     </ul>
   </body>
 </html>
