--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,6 +29,7 @@
       <li><a href="./shader2.html">Shader2</a></li>
       <li><a href="./sphere.html">Sphere</a></li>
       <li><a href="./animation.html">Animation</a></li>
+      <li><a href="./animation2.html">Animation2</a></li>
     </ul>
   </body>
 </html>
